# GenesisForge

./: .gitignore  CMakeLists.txt  charset.txt  generate_sdf_font.sh  main.cpp  opengl_utils.cpp  opengl_utils.h
assets/fonts/: NotoSansJP-VariableFont_wght.json
shaders/: basic.frag  basic.vert  block_fragment_shader.glsl  block_vertex_shader.glsl  text.frag  text.vert
src/: FontLoader.cpp  FontLoader.hpp  TextRenderer.cpp  TextRenderer.hpp  ThreadPool.cpp  ThreadPool.hpp  application.cpp  application.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  chunk_mesh_generator.cpp  chunk_mesh_generator.hpp  chunk_processor.cpp  chunk_processor.hpp  chunk_render_data.hpp  chunk_renderer.cpp  chunk_renderer.hpp  cube_data.cpp  cube_data.hpp  face_baker.cpp  face_baker.hpp  fullscreen_manager.cpp  fullscreen_manager.hpp  game_application.cpp  game_application.hpp  input_manager.cpp  input_manager.hpp  main.cpp  mesh_types.hpp  opengl_utils.cpp  opengl_utils.hpp  renderer.cpp  renderer.hpp  resource.rc  terrain_generator.cpp  terrain_generator.hpp  (+11 more)
src/Noise/: PerlinNoise2D.cpp  PerlinNoise2D.hpp
src/chunk/: chunk.cpp  chunk.hpp
src/noise/: perlin_noise_2d.cpp  perlin_noise_2d.hpp
src/time/: timer.cpp  timer.hpp
textures/: my_block_texture.oci
